Corrected accessibility issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </p>
         <form>
           <div>
-            <input type="text" name="email" id="email" placeholder="Email Address"/>
+            <input type="text" name="email" id="email" placeholder="Email Address" aria-label="email"/>
             <img src="./images/icon-error.svg" alt="error" class="error" id="error"/>
             <button id='submit-email'>
               <img src="./images/icon-arrow.svg" alt="arrow">
